--- a/calculator.html
+++ b/calculator.html
@@ -52,11 +52,11 @@
     <div class="container mainpage">
       <div class="row" id="maincontent">
 				<h2 class="page-title" style="margin-left: 0">Calculate Your New Raise</h2>
-				<p>Despite a year of unprecedented attacks on pubic employees, SEIU 503 members stuck with their union and it paid off. This summer the bargaining team won raises, held the line on healthcare, and made our workplaces safer and more accommodating. <a href="http://seiu503.org/statecontract">Click here for more information on your 2019 contract.</a></p>
+				<p>Despite a year of unprecedented attacks on pubic employees, SEIU 503 members stuck with their union and it paid off. This summer the bargaining team won raises, held the line on healthcare, and made our workplaces safer and more accommodating. <a href="https://seiu503.org/member_news/the-central-table-bargaining-team-has-reached-a-tentative-agreement/">Click here for more information on your 2023 contract.</a></p>
 
-				<p>If you are not a member, <a href="https://seiu503.tfaforms.net/10?tfa_267=2019stateraisecalculator">click here to join</a>. Our ability to win wages and benefits comes from all of us standing together in Union. States where people have left their union have lower wages and benefits because they can't bargain from a position of strength. So join today.</p>
+				<p>If you are not a member, <a href="https://seiu503signup.org?src=2023TACalculator">click here to join</a>. Our ability to win wages and benefits comes from all of us standing together in Union. States where people have left their union have lower wages and benefits because they can't bargain from a position of strength. So join today.</p>
 
-				<p>One of our key wins was a package of cost of living increases (COLAs) and steps that will increase wages by an average of X% over the next two years. The calculator below will provide you with an estimate of your raise, based on the average step increase of 4.7%.</p>
+				<p>One of our key wins was a package of cost of living increases (COLAs) and steps that will increase wages by an average of XXX% over the next two years. The calculator below will provide you with an estimate of your raise, based on the average step increase of XXX%.</p>
 				<hr style="width:100%; height: 1px; color: gray; margin-bottom: 30px"/>
 				<div id="instructions">
 					<h3 class="center">
