--- a/calculator.html
+++ b/calculator.html
@@ -57,7 +57,7 @@
 				<p>If you are not a member, <a href="https://seiu503signup.org?src=2023TACalculator">click here to join</a>. Our ability to win wages and benefits comes from all of us standing together in Union. States where people have left their union have lower wages and benefits because they can't bargain from a position of strength. So join today.</p>
 
 				<p>One of our key wins was a package of cost of living increases (COLAs) and steps that will increase wages by an average of XXX% over the next two years. The calculator below will provide you with an estimate of your raise, based on the average step increase of XXX%.</p>
-				<hr style="width:100%; height: 1px; color: gray; margin-bottom: 30px"/>
+				<hr style="width: 100%;  height: 1px;  color: #eee;  margin-bottom: 30px;"/>
 				<div id="instructions">
 					<h3 class="center">
 						Choose your classification from the list below.
@@ -85,65 +85,12 @@
 					</select>
 					</label>
 				</div>
-				<div class="calc-container">
-			    <div class="outerwrap">
-			      <div class="calculator">
-			      	<div class="message" id="message">
-			      		Total over life of contract:
-			      	</div>
-			        <div class="dispwrap" id="dispwrap">
-			          <input
-			          	id="display"
-			          	class="display"
-			          	type="text"
-			          	pattern="\d*"
-			          	autofocus
-			          ></input>
-			          <div id="exp"></div>
-			        </div>
-			        <div class="keycont">
-			          <button
-			          	class="calcbtn waves-effect waves-light submit"
-			          	id="submit"
-			          	value="submit"
-			          >Submit
-			        	</button>
-			        	<div id="keys">
-				        	<div class="keyrow">
-					          <button class="calcbtn waves-effect waves-light num" id="seven" value="7">7</button>
-					          <button class="calcbtn waves-effect waves-light num" id="eight" value="8">8</button>
-					          <button class="calcbtn waves-effect waves-light num" id="nine" value="9">9</button>
-				        	</div>
-									<div class="keyrow">
-					          <button class="calcbtn waves-effect waves-light num" id="four" value="4">4</button>
-					          <button class="calcbtn waves-effect waves-light num" id="five" value="5">5</button>
-					          <button class="calcbtn waves-effect waves-light num" id="six" value="6">6</button>
-									</div>
-									<div class="keyrow">
-					          <button class="calcbtn waves-effect waves-light num" id="one" value="1">1</button>
-					          <button class="calcbtn waves-effect waves-light num" id="two" value="2">2</button>
-					          <button class="calcbtn waves-effect waves-light num" id="three" value="3">3</button>
-									</div>
-									<div class="keyrow">
-					          <button class="calcbtn waves-effect waves-light num" id="zero" value="0">0</button>
-					          <button class="calcbtn waves-effect waves-light dot num" id="dot" value=".">.</button>
-				        	</div>
-				        </div>
-			          <button
-			          	class="calcbtn waves-effect waves-light start-over"
-			          	id="startOver"
-			          	value="startOver"
-			          >Start Over
-			        	</button>
-			        </div>
-			      </div>
-			    </div>
-  			</div>
+				<hr style="width: 100%;  height: 1px;  color: #eee;  margin-bottom: 30px;"/>
   			<div id="results"> </div>
   			<div class="disclaimer">
-	  			<p>This calculator is for educational purposes only and should not be taken as financial advice. It provides an estimate based on the average step increase of 4.7%. It does not take into account taxes, FSAs, or other items deducted from your paycheck, and therefore will only provide approximate results.</p>
+	  			<p>This calculator is for educational purposes only and should not be taken as financial advice. It provides an estimate based on the average step increase of 4.7%. It does not take into account any additions to your monthly pay such as differentials or incentives, nor does it take into account taxes, FSAs, or other items deducted from your paycheck, and therefore will only provide approximate results.</p>
 
-					<p>If you have questions about your contract, please speak with a steward in your worksite or contact the Member Resource Center at 1-844-503-SEIU (7348).</p>
+					<p>If you have questions about your contract, please speak with a steward in your worksite or contact the Member Assistance Center at 1-844-503-SEIU (7348).</p>
 				</div>
       </div> <!-- /row -->
     </div> <!-- container mainpage -->
