fix css on buttons, add new lookup file

--- a/calculator.html
+++ b/calculator.html
@@ -68,7 +68,7 @@
 				</div>
 					<form id="inputForm">
 						<div id="inputs">
-							<div class="custom-select" id="classifcationCustom" style="width:200px;">
+							<div class="custom-select" id="classifcationCustom" style="width:300px;">
 								<label for="classification" class="inputLabel cbcontainer" id="classificationLabel">
 									<select
 										name="classification"
@@ -79,7 +79,7 @@
 									</select>
 								</label>
 							</div>
-							<div class="custom-select" id="stepCustom" style="width:200px;">
+							<div class="custom-select" id="stepCustom" style="width:300px;">
 								<label for="step" class="inputLabel cbcontainer" id="stepLabel">
 									<select
 										name="step"
@@ -91,12 +91,14 @@
 								</label>
 							</div>
 						</div>
-						<button type="submit" id="submitButton" class="button btn">Submit</button>
-						<div id="results"> 
-		  				<div class="message" id="message">
-					     </div>
-		  			</div>
-						<button type="button" id="startOverButton" class="button btn">Start Over</button>
+						<div class="buttonWrap">
+							<button type="submit" id="submitButton" class="button btn">Submit</button>
+							<div id="results"> 
+			  				<div class="message" id="message">
+						     </div>
+			  			</div>
+							<button type="button" id="startOverButton" class="button btn">Start Over</button>
+						</div>
 					</form>
 				<hr style="width: 100%;  height: 1px;  color: #eee;  margin-bottom: 30px;"/>
   			<div class="disclaimer">
