--- a/calculator.html
+++ b/calculator.html
@@ -52,16 +52,16 @@
     <div class="container mainpage">
       <div class="row" id="maincontent">
 				<h2 class="page-title" style="margin-left: 0">Calculate Your New Raise</h2>
-				<p>Because union members came together and took action in our worksites, at the capitol, and in our communities, we were able to reach a tentative agreement that included historically high COLAs, protected our health insurance, and made our worksites safer and more accommodating. <a href=https://seiu503.org/member_news/the-central-table-bargaining-team-has-reached-a-tentative-agreement/ >Click here for more information on your 2023 contract.</a><p>If you are not a member, <a href="https://seiu503signup.org?src=2023TACalculator">click here to join</a>. Our union's power to win strong wage increases and to protect our benefits comes from all of us joining together as state workers. States where people have left their union have lower wages and worse benefits because workers can’t bargain from a position of strength. So <a href="https://seiu503signup.org?src=2023TACalculator">join today!</a><p>One of our key wins was a package of cost of living increases (COLAs) and steps that will increase wages by an average of <strong>19% over the next two years</strong>. The calculator below will provide you with an estimate of your raise, based on the average step increase of 4.7%.<hr style=width:100%;height:1px;color:#eee;margin-bottom:30px><div id=instructions><h3 class=center>1. Check strikeable or leave blank for non-strikeable</h3><h3 class=center>2. Choose your classification from the list below.</h3><h3 class=center>3. Enter your current step and click Submit.</h3><p style="max-width: 600px; margin: auto; font-size: .75em;">If you don't know your current classification and/or step, you can find those in the "view profile" section on Workday. The "compensation" tab will show your step, and the "summary" tab will show your classification.</p></div><form id=inputForm><div id=inputs>
+				<p>Because union members came together and took action in our worksites, at the capitol, and in our communities, we were able to reach a tentative agreement that included historically high COLAs, protected our health insurance, and made our worksites safer and more accommodating. <a href=https://seiu503.org/member_news/the-central-table-bargaining-team-has-reached-a-tentative-agreement/ >Click here for more information on your 2023 contract.</a><p>If you are not a member, <a href="https://seiu503signup.org?src=2023TACalculator">click here to join</a>. Our union's power to win strong wage increases and to protect our benefits comes from all of us joining together as state workers. States where people have left their union have lower wages and worse benefits because workers can’t bargain from a position of strength. So <a href="https://seiu503signup.org?src=2023TACalculator">join today!</a><p>One of our key wins was a package of cost of living increases (COLAs) and steps that will increase wages by an average of <strong>19% over the next two years</strong>. The calculator below will provide you with an estimate of your raise, based on the average step increase of 4.7%.<hr style=width:100%;height:1px;color:#eee;margin-bottom:30px><div id=instructions><h3 class=center>1. Check the box if your classification is non-strikeable</h3><h3 class=center>2. Choose your classification from the list below.</h3><h3 class=center>3. Enter your current step and click Submit.</h3><p style="max-width: 600px; margin: auto; font-size: .75em;">If you don't know your current classification and/or step, you can find those in the "view profile" section on Workday. The "compensation" tab will show your step, and the "summary" tab will show your classification.</p></div><form id=inputForm><div id=inputs>
 					<div style="max-width:600px;margin:auto;">
-						<label for="strikeable" class="strikeableLabel cbcontainer" id="strikeableLabel" style="width: 270px; margin: 30px auto; font-size: .8em;">
+						<label for="nonStrikeable" class="nonStrikeableLabel cbcontainer" id="nonStrikeableLabel" style="width: 265px; margin: 30px auto; font-size: .8em;">
 							<input
 								type="checkbox"
-								name="strikeable"
-								id="strikeable"
-								class="strikeable"
+								name="nonStrikeable"
+								id="nonStrikeable"
+								class="nonStrikeable"
 							>
-							&larr; Check if your classification is strikeable
+							&larr; Check if your classification is non-strikeable
 							<span class="checkmark"></span>
 						</label>
 					</div>
